@@ -6,6 +6,7 @@
     using System.Text;
 
     using AjTalk;
+    using AjTalk.Language;
 
     using Microsoft.VisualStudio.TestTools.UnitTesting;
 
