@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ClassDiagram MajorVersion="1" MinorVersion="1">
-  <Class Name="AjTalk.BaseClass">
+  <Class Name="AjTalk.Language.BaseClass">
     <Position X="4.25" Y="3" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAgAAAAAAAAAAAAAAAAAAAQAAAAEAAAAQQAAAAAAAAA=</HashCode>
-      <FileName>BaseClass.cs</FileName>
+      <FileName>Language\BaseClass.cs</FileName>
     </TypeIdentifier>
     <Lollipop Position="0.2" />
   </Class>
-  <Class Name="AjTalk.BaseObject">
+  <Class Name="AjTalk.Language.BaseObject">
     <Position X="2.25" Y="3" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAAACiAAAAgAAAAAAAAAAAAAAAAEAAA=</HashCode>
-      <FileName>BaseObject.cs</FileName>
+      <FileName>Language\BaseObject.cs</FileName>
     </TypeIdentifier>
     <Lollipop Position="0.2" />
   </Class>
@@ -23,11 +23,11 @@
       <FileName>Compiler\Parser.cs</FileName>
     </TypeIdentifier>
   </Class>
-  <Class Name="AjTalk.ExecutionBlock" Collapsed="true">
+  <Class Name="AjTalk.Language.ExecutionBlock" Collapsed="true">
     <Position X="11.25" Y="0.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAUAAAAABAAAAACoAIAARAAgAAAADAA=</HashCode>
-      <FileName>ExecutionBlock.cs</FileName>
+      <FileName>Language\ExecutionBlock.cs</FileName>
     </TypeIdentifier>
   </Class>
   <Class Name="AjTalk.Machine" Collapsed="true">
@@ -44,11 +44,11 @@
       <FileName>Compiler\Token.cs</FileName>
     </TypeIdentifier>
   </Class>
-  <Class Name="AjTalk.EndOfInputException" Collapsed="true">
+  <Class Name="AjTalk.Compiler.EndOfInputException" Collapsed="true">
     <Position X="9.5" Y="0.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>EndOfInputException.cs</FileName>
+      <FileName>Compiler\EndOfInputException.cs</FileName>
     </TypeIdentifier>
   </Class>
   <Class Name="AjTalk.Compiler.LexerException" Collapsed="true">
@@ -65,76 +65,76 @@
       <FileName>Compiler\Lexer.cs</FileName>
     </TypeIdentifier>
   </Class>
-  <Class Name="AjTalk.Block">
+  <Class Name="AjTalk.Language.Block">
     <Position X="0.5" Y="8.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAEAAAAACAACAUQACAEAiSIBRAACQEAAICAIAICIjAA=</HashCode>
-      <FileName>Block.cs</FileName>
+      <FileName>Language\Block.cs</FileName>
     </TypeIdentifier>
     <Lollipop Position="1.3" />
   </Class>
-  <Class Name="AjTalk.Method">
+  <Class Name="AjTalk.Language.Method">
     <Position X="2.75" Y="8.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAQAAAAAAAAQAAAIAAAQAAAAEAAAAJAAAEAAAgAA=</HashCode>
-      <FileName>Method.cs</FileName>
+      <FileName>Language\Method.cs</FileName>
     </TypeIdentifier>
     <Lollipop Position="0.2" />
   </Class>
-  <Interface Name="AjTalk.IClass">
+  <Interface Name="AjTalk.Language.IClass">
     <Position X="0.5" Y="7" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>IClass.cs</FileName>
+      <FileName>Language\IClass.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IMessage" Collapsed="true">
+  <Interface Name="AjTalk.Language.IMessage" Collapsed="true">
     <Position X="7.75" Y="3.75" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAEAAAAAAAAQAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>IMessage.cs</FileName>
+      <FileName>Language\IMessage.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IObject">
+  <Interface Name="AjTalk.Language.IObject">
     <Position X="0.5" Y="3" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAAACCAAAAAAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>IObject.cs</FileName>
+      <FileName>Language\IObject.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IBlock">
+  <Interface Name="AjTalk.Language.IBlock">
     <Position X="6.5" Y="8.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>IBlock.cs</FileName>
+      <FileName>Language\IBlock.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IMethod" Collapsed="true">
+  <Interface Name="AjTalk.Language.IMethod" Collapsed="true">
     <Position X="4.75" Y="8.5" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAAAAAAAAAAAQAAAIAAAQAAAAAAAAAAAAAAAAAAAA=</HashCode>
-      <FileName>IMethod.cs</FileName>
+      <FileName>Language\IMethod.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IClassDescription">
+  <Interface Name="AjTalk.Language.IClassDescription">
     <Position X="0.5" Y="4.75" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAAAEAAAAAAAAAAAAAAAAAQAAAAAAIAAAAIAAAAAAAA=</HashCode>
-      <FileName>IClassDescription.cs</FileName>
+      <FileName>Language\IClassDescription.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Interface Name="AjTalk.IBehavior">
+  <Interface Name="AjTalk.Language.IBehavior">
     <Position X="5.5" Y="5.25" Width="1.5" />
     <TypeIdentifier>
       <HashCode>AAQAAAAAAAAAAAAEAAAAAAAAAAEAAAAAQACAAAEAACg=</HashCode>
-      <FileName>IBehavior.cs</FileName>
+      <FileName>Language\IBehavior.cs</FileName>
     </TypeIdentifier>
   </Interface>
-  <Enum Name="AjTalk.ByteCode" Collapsed="true">
+  <Enum Name="AjTalk.Language.ByteCode" Collapsed="true">
     <Position X="7.75" Y="4.75" Width="1.5" />
     <TypeIdentifier>
       <HashCode>gAJBoAQgARAIQIABAEARgAwACiGIAQAAQAAgQIQAUAQ=</HashCode>
-      <FileName>ByteCodes.cs</FileName>
+      <FileName>Language\ByteCodes.cs</FileName>
     </TypeIdentifier>
   </Enum>
   <Enum Name="AjTalk.Compiler.TokenType" Collapsed="true">
